Design updates for reports page and fixing overflow on client, project block

--- a/timestrap/static/css/base.css
+++ b/timestrap/static/css/base.css
@@ -58,6 +58,17 @@ button {
     border-top: 1px solid #eceeef;
 }
 
+.entry-rows .row:first-child {
+    border-top-right-radius: .25rem;
+    border-top-left-radius: .25rem;
+}
+
+.entry-rows .row:last-child {
+    border-bottom-right-radius: .25rem;
+    border-bottom-left-radius: .25rem;
+    border-bottom: 1px solid #eceeef;
+}
+
 .entry-rows .duration.display-4 {
     font-size: 1.5rem;
 }
@@ -65,6 +76,16 @@ button {
 .entry-rows .note {
     line-height: 1.3;
     margin-bottom: 3px;
+}
+
+.entry-rows .username {
+    overflow-x: hidden;
+}
+
+.entry-rows .client-project {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .btn-icon::after {
